Fluxify the logging functions

--- a/css/screen.less
+++ b/css/screen.less
@@ -241,6 +241,10 @@ aside.menupanel {
 	margin: 11vmin auto;
 	background: @color-greyStart;
 	border-radius: 2vmin 2vmin 14vmin 2vmin;
+	canvas {
+		height: 100%;
+		margin: 16px 0 0 20px;
+	}
 	i.fa {
 		display: block;
 		font-size: 120px;
